--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
   background-color: grey;
-  font-size: 12px; }
+  font-size: 12px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
 header {
   display: flex;
@@ -13,28 +16,26 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: aqua;
-  flex-shrink: 1000px;
-  flex-grow: 1000px;
-  flex-basis: 1000px; }
+  background-color: red; }
 
 .animalCards-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
-  margin: 20px 200px; }
+  margin: 20px 200px;
+  height: 400px; }
 
 .animalCard {
   width: 100%;
-  text-align: left;
+  text-align: center;
   border: 1px solid black;
-  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.9);
+  box-shadow: 5px 5px 3px #6b2a2a;
   transform: translateY(12px);
   transition: 0.5s; }
   .animalCard:hover {
     background-color: rgba(176, 170, 192, 0.5);
     transform: translateY(0px);
-    box-shadow: 10px 20px 3px rgba(0, 0, 0, 0.9); }
+    box-shadow: 10px 20px 3px #6b2a2a; }
 
 .animalImage {
   width: 100%; }
@@ -54,5 +55,24 @@ header {
     top: -5px;
     right: 5px;
     font-size: 80px; }
+
+.footer-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 3px solid #6b2a2a; }
+  .footer-wrap .footer-container {
+    flex-direction: row;
+    display: flex; }
+  .footer-wrap p {
+    font-size: 1rem;
+    align-items: baseline;
+    color: #6b2a2a;
+    margin: 0px; }
+  .footer-wrap img {
+    height: 15px;
+    width: 15px;
+    margin-left: 3px;
+    margin-top: 2px; }
 
 /*# sourceMappingURL=style.css.map */
